wordpress-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"wordpress:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"wordpress\")].image"}]'

spec:

  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
        version: 'latest'
    spec:
      containers:
      - name: wordpress
        image: 'wordpress-steam:latest'
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: wordpress-data
          mountPath: /data
        
        - name: wp-config-file
          mountPath: /var/www/html/wordpress/wp-config.php
          subPath: wp-config.php
      volumes:
      - name: wp-config-file
        configMap:
          name: wp-config-php
          items:
          - key: wp-config.php
            path: wp-config.php
      - name: wordpress-data
        persistentVolumeClaim:
          claimName: wordpress-pvc
